--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,6 +62,11 @@
     </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <br>
+    <br>
+    <h6>New User? 
+      <a href="/register"> Register Here</a>
+    </h6>
     <p class="mt-5 mb-3 text-muted">&copy; Dev Pilots</p>
   </form>
 
