--- a/views/register.ejs
+++ b/views/register.ejs
@@ -69,6 +69,12 @@
     </div>
 
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+
+    <br>
+    <br>
+    <h6>Already an user?
+      <a href="/login"> Login Here</a>
+    </h6>
     <p class="mt-5 mb-3 text-muted">&copy; Dev Pilots</p>
   </form>
 
