--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -5,10 +5,15 @@
     <img class="mb-4" src="images/foodlogo.png" alt="" width="100" height="100">
     <h2 class="display-4">Calorie Heist</h2>
     <p class="alert alert-info">Work in Progress...</p>
-    <hr>
 
-    <a class="btn btn-light" href="/" role="button">Log Out</a>
-    <a class="btn btn-primary" href="/submit" role="button">Next Page</a>
+//for loop    
+<%usersWithSecrets.forEach(function(user){%>
+     <p class="alert alert-info"><%=user.secret%></p>
+<%})%>
+
+    <hr>
+    <a class="btn btn-light" href="/logout" role="button">Log Out</a>
+    <a class="btn btn-primary" href="/submit" role="button">Submit a secret</a>
   </div>
 </div>
 
