--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -5,8 +5,7 @@
     <img class="mb-4" src="images/foodlogo.png" alt="" width="100" height="100">
     <h2 class="display-4">Calorie Heist</h2>
     <p class="alert alert-info">Work in Progress...</p>
-
-//for loop    
+<% // for loop%>
 <%usersWithSecrets.forEach(function(user){%>
      <p class="alert alert-info"><%=user.secret%></p>
 <%})%>
@@ -14,6 +13,9 @@
     <hr>
     <a class="btn btn-light" href="/logout" role="button">Log Out</a>
     <a class="btn btn-primary" href="/submit" role="button">Submit a secret</a>
+    <br>
+    <br>
+    <a class="btn btn-primary" href="/profile/<%=currentUser%>" role="button">Personal Dashboad</a>
   </div>
 </div>
 
