--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,19 +1,67 @@
 <%- include('partials/header') %>
 
-<div class="jumbotron text-center">
-  <div class="container">
+<section class="vh-100" style="background-color: #f4f5f7;">
+    <div class="container-fluid py-5">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-lg-6 mb-4 mb-lg-0">
+                <div class="card mb-3" style="border-radius: .5rem;">
+                    <div class="row g-0">
+                        <div class="col-md-4 gradient-custom text-center text-white" style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                            <%if(currentUserObj.gender==="male"){%>
+                            <img src="https://cdn1.iconfinder.com/data/icons/avatars-1-5/136/18-512.png" alt="Avatar" class="img-fluid my-5" style="width: 100px;" />
+                            <%}else{%>
+                            <img src="https://cdn1.iconfinder.com/data/icons/avatars-1-5/136/87-512.png" alt="Avatar" class="img-fluid my-5" style="width: 100px;" />
+                            <%}%>
 
-    <h4>This is your personal Dashboard</h4>
-    <hr>
-    <br>
-    <p class="alert alert-info">Name : <%=currentUserObj.first+" "+currentUserObj.last%></p>
-    <p class="alert alert-info">Email : <%=currentUserObj.username%></p>
-    <p class="alert alert-info">Req calorie intake : <%=currentUserObj.cal%></p>
+            </div>
+            <div class="col-md-8">
+              <div class="card-body p-4">
+                <h6>Personal Information</h6>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6>Name</h6>
+                    <p class="text-muted"><%=currentUserObj.first+" "+currentUserObj.last%></p>
+                        </div>
+                        <div class="col-6 mb-3">
+                            <h6>Email</h6>
+                            <p class="text-muted"><%=currentUserObj.username%></p>
+                        </div>
+                        <div class="col-6 mb-3">
+                            <h6>Weight</h6>
+                            <p class="text-muted"><%=currentUserObj.weight%> kg</p>
+                        </div>
+                        <div class="col-6 mb-3">
+                            <h6>Height</h6>
+                            <p class="text-muted"><%=currentUserObj.height%> cm</p>
+                        </div>
+                        <div class="col-6 mb-3">
+                            <h6>BMI</h6>
+                            <p class="text-muted"><%=currentUserObj.bmi%></p>
+                        </div>
+                        <div class="col-6 mb-3">
+                            <h6>Required Calorie Intake</h6>
+                            <p class="text-muted"><%=currentUserObj.cal%> Cal</p>
+                        </div>
 
-    <a class="btn btn-light" href="/logout" role="button">Log Out</a>
-    <a class="btn btn-primary" href="/bmi" role="button">Calculate BMI</a>
-    <a class="btn btn-primary" href="/meal" role="button">Meal Counter</a>
-  </div>
-</div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+
+
+    </div>
+    <div class="jumbotron text-center">
+        <a class="btn btn-light" href="/logout" role="button">Log Out</a>
+        <a class="btn btn-primary" href="/bmi" role="button">Calculate BMI</a>
+        <a class="btn btn-primary" href="/meal" role="button">Meal Counter</a>
+        </div>
+
+    </div>
+</section>
+
 
 <%- include('partials/footer') %>
