--- a/views/meal.ejs
+++ b/views/meal.ejs
@@ -1,50 +1,90 @@
+<!-- meal.ejs -->
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html>
 <head>
-    <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
-    <title>Meal Calories</title>
+    <title>Food Item Input and JSON Table</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            background: linear-gradient(90deg, #6868b5 ,rgb(223, 154, 154), #df6271);
+        }
+    </style>
 </head>
-
-<body style="background-position: center; background-repeat: no-repeat; background-size: cover;">
-
-    <div class="container my-5">
-        <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
-            <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
-                <h1 class="display-4 fw-bold lh-1">NUTRIENTS INFORMATION</h1>
-                <p class="lead"></p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                </div>
-            </div>
-            <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                <div class="px-4 py-5 my-5 text-center">
-                    <h1 class="display-5 fw-bold">CALCULATE</h1>
-                    <div class="col-lg-6 mx-auto">
-
-                        <form action="/meal" method="post" class="mb-3">
-                            <label for="height" class="form-label">Enter the Food Item : </label>
-                            <input type="text" class="form-floating" name="food" placeholder=" Banana, Apple..">
-                            <br>
-                            <br>
-                            <button type="submit" name="submit" class="btn btn-primary">SUBMIT</button>
-                            <br>
-                            <br>
-                            <label for="result">The Calorie Value is :</label>
-                            <output name="result"><%= nutrients %></output>
-                        </form>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+<body>
+  <div class="container mt-4">
+    <h2>Food Item Input</h2>
+    <form action="/meal" method="POST" id="foodForm">
+      <div class="form-group">
+        <label for="foodItem">Enter Food Item:</label>
+        <input type="text" name="food" class="form-control" id="foodItem" placeholder="e.g. 2 Apples, 1 Banana">
+      </div>
+      <button type="submit" class="btn btn-primary">Get Nutrients</button>
+    </form>
+  </div>
+  
+  <br>
+  <br>
+  <% if (foodItemList) { %>
+    <h2 class="text-center mt-4">Nutrients Table</h2>
+    <br>
+    <style>
+        table {
+          width: 100%;
+          border-collapse: collapse;
+          margin-bottom: 20px;
+        }
+      
+        th, td {
+          padding: 8px;
+          text-align: center;
+          border: 1px solid #0c0c0c;
+        }
+      
+        th {
+          background-color: #f7f2f279;
+          font-weight: bold;
+        }
+      </style>
+    <div class="table-responsive mx-auto" style="max-width: 1100px;">
+    <table class="table table-bordered table-striped text-center">
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Calories</th>
+            <th>Serving Size (g)</th>
+            <th>Fat (g)</th>
+            <th>Saturated Fat (g)</th>
+            <th>Protein (g)</th>
+            <th>Sodium (mg)</th>
+            <th>Potassium (mg)</th>
+            <th>Cholesterol (mg)</th>
+            <th>Carbohydrates (g)</th>
+            <th>Fiber (g)</th>
+            <th>Sugar (g)</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% foodItemList.forEach((foodItem) =>{ %>
+            <tr>
+            <td><%= foodItem.name %></td>
+            <td><%= foodItem.calories %></td>
+            <td><%= foodItem.serving_size_g %></td>
+            <td><%= foodItem.fat_total_g %></td>
+            <td><%= foodItem.fat_saturated_g %></td>
+            <td><%= foodItem.protein_g %></td>
+            <td><%= foodItem.sodium_mg %></td>
+            <td><%= foodItem.potassium_mg %></td>
+            <td><%= foodItem.cholesterol_mg %></td>
+            <td><%= foodItem.carbohydrates_total_g %></td>
+            <td><%= foodItem.fiber_g %></td>
+            <td><%= foodItem.sugar_g %></td>
+            </tr>
+        <% })%>
+        </tbody>
+    </table>
     </div>
+    <% } %>
 
-    <br><br><br><br><br><br>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 </body>
-
 </html>
