--- a/views/bmi.ejs
+++ b/views/bmi.ejs
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
     <title>BMR</title>
 </head>
@@ -18,7 +19,8 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">BMI</h1>
-                <p class="lead">Body Mass Index (BMI) is a person's weight in kilograms divided by the square of height in meters. A high BMI can indicate high body fatness.</p>
+                <p class="lead">Body Mass Index (BMI) is a person's weight in kilograms divided by the square of height
+                    in meters. A high BMI can indicate high body fatness.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 </div>
             </div>
@@ -40,7 +42,9 @@
                             <br>
                             <br>
                             <label for="result">Your BMI :</label>
-                            <output name="result"><%= bmi %></output>
+                            <output name="result">
+                                <%= bmi %>
+                            </output>
                         </form>
 
                     </div>
@@ -54,7 +58,8 @@
         <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
             <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
                 <h1 class="display-4 fw-bold lh-1">BMR</h1>
-                <p class="lead">Basal metabolic rate (BMR) is the total number of calories that your body needs to perform basic, life-sustaining functions while at rest.</p>
+                <p class="lead">Basal metabolic rate (BMR) is the total number of calories that your body needs to
+                    perform basic, life-sustaining functions while at rest.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
                 </div>
             </div>
@@ -100,7 +105,9 @@
                             <button type="submit" class="btn btn-primary">SUBMIT</button>
                             <br><br>
                             <label for="result">Your Calorie Requirement:</label>
-                            <output name="result"><%= cal %> Cal</output>
+                            <output name="result">
+                                <%= cal %> Cal
+                            </output>
                         </form>
                     </div>
                 </div>
@@ -111,9 +118,15 @@
 
 
     <br><br><br><br><br><br>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
