--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,21 +1,26 @@
 <%- include('partials/header') %>
 
-<div>
-  <div class="home">
-    <div class="home-logo">
-      <img src="images/foodlogo.png" alt="" width="100" height="100" />
-    </div>
-    <div class="home-logo"><h1 class="display-3">Calorie Heist</h1></div>
+  <body class="text-center">
+    <div>
+      <div class="home">
+        <div class="home-logo">
+          <img src="images/foodlogo.png" alt="" width="100" height="100" />
+        </div>
+        <div class="home-logo">
+          <h1 class="display-3">Calorie Heist</h1>
+        </div>
 
-    <div class="home-logo">
-      <p class="lead">Your Personal Health Tracker.</p>
+        <div class="home-logo">
+          <p class="lead">Your Personal Health Tracker.</p>
+        </div>
+        <hr />
+        <div class="reg-login-btn">
+          <a class="btn btn-light" href="/user/register" role="button" margin-inline: 1em 2em>Register</a>
+          <a class="btn btn-primary" href="/user/login" role="button">Login</a>
+        </div>
+      </div>
     </div>
-    <hr />
-    <div class="reg-login-btn">
-      <a class="btn btn-light" href="/register" role="button" margin-inline: 1em 2em>Register</a>
-      <a class="btn btn-primary" href="/login" role="button">Login</a>
-    </div>
-  </div>
-</div>
+  </body>
 
-<%- include('partials/footer') %>
+
+  <%- include('partials/footer') %>
