--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,83 +1,89 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.88.1">
-    <title>Register</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/sign-in/">
-
-    <!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Favicons -->
-<link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="/docs/5.1/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="/docs/5.1/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
-<link rel="stylesheet" href="css/styles.css">
-<meta name="theme-color" content="#7952b3">
+<head>
+  <title>Register</title>
+  <meta charset="utf-8">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.0/font/bootstrap-icons.css">
 
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+  <style>
+    body {
+      background: linear-gradient(90deg, #333399, rgb(223, 154, 154), #e02e43);
+      align-items: center;
+      justify-content: center;
+    }
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      background-color: #ffffff73;
+    }
 
+    .form-group {
+      margin-bottom: 20px;
+    }
 
-    <!-- Custom styles for this template -->
-    <link href="css/register.css" rel="stylesheet">
-  </head>
-  <body class="text-center">
+    .btn-submit {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      background-color: #007bff;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
 
-<main class="form-signin">
-  <form action="/register" method="post">
-    <img class="mb-4" src="images/foodlogo.png" alt="" width="72" height="72">
-    <h2 class="h3 mb-3 fw-normal">SignUp for our Calorie App!</h2>
+    .btn-submit:hover {
+      background-color: #0056b3;
+    }
+  </style>
 
-    <div class="form-floating">
-      <input type="text" name="firstName" class="form-control top"  placeholder="First Name">
-      <label for="floatingInput">First Name</label>
-    </div>
-    <div class="form-floating">
-    <input type="text" name="lastName" class="form-control middle1" placeholder="Last Name">
-    <label for="floatingInput">Last Name</label>
-</div>
-    <div class="form-floating">
-      <input type="email" name="username" class="form-control middle2"  placeholder="Enter your email">
-      <label for="floatingInput">Email address</label>
-    </div>
+</head>
 
-    <div class="form-floating">
-      <input type="password" class="form-control bottom" name="password" placeholder="Password">
-      <label for="password">Password</label>
-    </div>
+<body class="text-center">
+  <br>
+  <div class="container">
+    <form action="/user/register" method="post">
+      <div>
+        <img src="/images/foodlogo.png" alt="" width="100" height="100" />
+      </div>
+      <h2 class="h3 mb-3 fw-normal">SignUp for our Calorie App!</h2>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+      <div class="form-floating">
+        <input type="text" name="firstName" class="form-control top" placeholder="First Name">
+        <label for="floatingInput">First Name</label>
+      </div>
+      <div class="form-floating">
+        <input type="text" name="lastName" class="form-control middle1" placeholder="Last Name">
+        <label for="floatingInput">Last Name</label>
+      </div>
+      <div class="form-floating">
+        <input type="email" name="username" class="form-control middle2" placeholder="Enter your email">
+        <label for="floatingInput">Email address</label>
+      </div>
 
-    <br>
-    <br>
-    <h6>Already an user?
-      <a href="/login"> Login Here</a>
-    </h6>
-    <p class="mt-5 mb-3 text-muted">&copy; Dev Pilots</p>
-  </form>
+      <div class="form-floating">
+        <input type="password" class="form-control bottom" name="password" placeholder="Password">
+        <label for="password">Password</label>
+      </div>
 
-  </body>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
+
+      <br>
+      <br>
+      <h6>Already an user?
+        <a href="/user/login"> Login Here</a>
+      </h6>
+      <p class="mt-5 mb-3 text-muted">&copy; Dev Pilots</p>
+    </form>
+</body>
+
 </html>
