--- a/views/add-meal.ejs
+++ b/views/add-meal.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Food Item Input and JSON Table</title>
+  <title>Add Today's Meal</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -17,17 +17,16 @@
         <div>
           <img src="/images/foodlogo.png" alt="" width="120" height="120" />
         </div>
-        <form action="/meal" method="POST" id="foodForm" >
+        <form action="/nutrients/add" method="POST" id="foodForm" >
           <div class="form-group">
             <label for="foodItem" style="color: white; font-size:1.3rem">Enter Food Item:</label>
             <input type="text" name="food" class="form-control" id="foodItem" placeholder="e.g. 2 Apples, 1 Banana">
           </div>
-          <button type="submit" class="btn btn-primary">Get Nutrients</button>
+          <button type="submit" class="btn btn-primary" style="margin-bottom: 15px;">Add in Today's Meal</button>
         </form>
       </div>
       <% if (foodItemList) { %>
-        <h3 class="text-center mt-4">Nutrients Table</h2>
-        <br>
+        <label for="foodItem" style="color: rgb(0, 0, 0); font-size:1.3rem">The following has been added to your today's meal intake : </label>
         <style>
           table {
             width: 100%;
@@ -47,7 +46,7 @@
             font-weight: bold;
           }
         </style>
-        <div class="table-responsive mx-auto" style="max-width: 1100px;">
+        <div class="table-responsive mx-auto">
           <table class="table table-bordered table-striped text-center">
             <thead>
               <tr>
@@ -57,8 +56,6 @@
                 <th>Fat (g)</th>
                 <th>Saturated Fat (g)</th>
                 <th>Protein (g)</th>
-                <th>Sodium (mg)</th>
-                <th>Potassium (mg)</th>
                 <th>Cholesterol (mg)</th>
                 <th>Carbohydrates (g)</th>
                 <th>Fiber (g)</th>
@@ -85,12 +82,6 @@
                   </td>
                   <td>
                     <%= foodItem.protein_g %>
-                  </td>
-                  <td>
-                    <%= foodItem.sodium_mg %>
-                  </td>
-                  <td>
-                    <%= foodItem.potassium_mg %>
                   </td>
                   <td>
                     <%= foodItem.cholesterol_mg %>
