--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
     integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
-
+  <div class="mainpic">
+    <img src="/images/mainpic.png" alt="food-pic">
+  </div>
   <body class="text-center">
     <div>
       <div class="translucent">
