--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
+    <footer class="footer mt-auto py-3">
+      <div class="container">
+        <span class="text-muted">Copyright &copy; 2025 Dev Pilots</span>
+      </div>
+    </footer>
+
 </body>
 
 </html>
