--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr>
 
 <head>
   <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-  <nav class="navbar navbar-expand-lg navbar-light"
-    style="background: rgba(241, 241, 238); border-radius:0px 0px 20px 20px;">
+  <style>
+    .navbar {
+      background: rgba(241, 241, 238);
+      border-radius: 0px 0px 20px 20px;
+    }
+
+    .navbar-brand img {
+      margin-right: 15px;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
-        <img src="/images/foodlogo.png" alt="Calorie Heist" height="30" style="margin-right: 15px;">
+        <img src="/images/foodlogo.png" alt="Calorie Heist" height="30">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,19 +30,19 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/bmi">BMI Calculator</a>
           </li>
-          <li class=" nav-item">
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/bmr">BMR Calculator</a>
           </li>
-          <li class=" nav-item">
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/nutrients">Nutrients Calculator</a>
           </li>
         </ul>
         <% if(loggedIn){ %>
-          <a class=" btn btn-outline-secondary ml-auto" href="/user/logout">
+          <a class="btn btn-outline-secondary ml-auto" href="/user/logout">
             Log Out
           </a>
           <% } else {%>
-            <a class=" btn btn-outline-primary ml-auto" href="/user/login">
+            <a class="btn btn-outline-primary ml-auto" href="/user/login">
               Log In
             </a>
             <%}%>
